--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,9 @@
 /* color variables */
 :root {
   --White: hsl(0, 0%, 100%);
-  --Light_gray: hsl(212, 45%, 89%);
-  --Grayish_blue: hsl(220, 15%, 55%);
-  --Dark_blue: hsl(218, 44%, 22%);
+  --Light-gray: hsl(212, 45%, 89%);
+  --Grayish-blue: hsl(220, 15%, 55%);
+  --Dark-blue: hsl(218, 44%, 22%);
 }
 
 /* elements render */
@@ -23,44 +23,42 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--Light_gray);
+  background-color: var(--Light-gray);
   font-family: "Outfit", sans-serif;
+  line-height: 1.3;
 }
 
 .box {
-  padding: 1rem;
-  width: 90%;
-  max-width: 375px;
+  padding: 1em;
+  padding-bottom: 2.5em;
+  width: min(90%,19rem);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: var(--White);
-  border-radius: 1rem;
-  box-shadow: 0 0 3px var(--Grayish_blue);
+  box-shadow: 0 0 1px var(--White);
+  border-radius: 1.2rem;
 }
 
 .box__img {
-  border-radius: 1rem;
-  overflow: hidden;
-}
-
-.box__img img {
   width: 100%;
+  height: auto;
+  border-radius: .6rem;
 }
 
 .box__title {
-  margin: 1.5rem 0;
-  width: 80%;
-  color: var(--Dark_blue);
+  margin-top: 1em;
+  margin-bottom: .8em;
+  width: 19ch;
+  color: var(--Dark-blue);
   text-align: center;
-  font-size: 1.3rem;
+  font-size: clamp(1.3rem, 1.6vw, 1.5rem);
 }
 
 .box__content {
-  margin-bottom: 1.5rem;
-  width: 80%;
-  color: var(--Grayish_blue);
+  width: 25ch;
+  color: var(--Grayish-blue);
   text-align: center;
-  font-size: 15px;
+  font-size: clamp(.9rem, 1vw, 1.1rem);
 }
