--- a/styles/main.css
+++ b/styles/main.css
@@ -20,12 +20,17 @@
 body {
   width: 100%;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: var(--Light-gray);
   font-family: "Outfit", sans-serif;
   line-height: 1.3;
+}
+
+main{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .box {
